--- a/PhotoMetaData/PhotoMetaData/Pages/Index.cshtml
+++ b/PhotoMetaData/PhotoMetaData/Pages/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using ImageMagick
+@using System.Linq
 @model IndexModel
 
 
@@ -11,27 +12,45 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
-@*    Read image from file*@    
-    @{
-        var image = new MagickImage("C:\\Users\\Abraham\\Desktop\\testPhotoMetaData\\PhotoMetaData\\PhotoMetaData\\wwwroot\\Image\\Brown_3.jpg");
+    @*    Read image from file*@
 
-        // Retrieve the exif information
+    @{
+    
+        var image = new MagickImage("C:\\Users\\ayane\\Desktop\\work\\School\\WOU\\oregon turtles\\testPhotoMetaData\\PhotoMetaData\\PhotoMetaData\\wwwroot\\Image\\IMG_4412.HEIC");
+
         var profile = image.GetExifProfile();
 
-        // Check if image contains an exif profile
-        if (profile is null)
-            Console.WriteLine("Image does not contain exif information.");
-        else
-        {
-            // Write all values to the console
-            foreach (var value in profile.Values)
-            {
-                <p>this is the tag @value.Tag</p><br />
-                <P>This is the DataType @value.DataType</P><br />
-                <p>This is the value .ToString @value.ToString()</p>
-                Console.WriteLine("{0}({1}): {2}", value.Tag, value.DataType, value.ToString());
-            }
-        }
+        var thing = "string";
+        <p>@thing</p>
+        
+        
 
+        // Retrieve the exif information
+        // var profile = image.GetExifProfile();
+        //
+        // // Check if image contains an exif profile
+        // if (profile is null)
+        //     Console.WriteLine("Image does not contain exif information.");
+        // else
+        // {
+        //     // Write all values to the console
+        //     foreach (var value in profile.Values)
+        //     {
+        //         // <p>this is the tag @value.Tag</p>
+        //         //
+        //         // <br />
+        //         // <p>This is the DataType @value.DataType</p>
+        //         //
+        //         // <br />
+        //         // <p>This is the value .ToString @value.ToString()</p>
+        //         // // Console.WriteLine("{0}({1}): {2}", value.Tag, value.DataType, value.ToString());
+        //
+        //         Console.WriteLine($"Image width is: {image.Width}");
+        //     }
+        // }
+    
     }
+    
+    
+
 </div>
